# FinanceServer

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  config.json  vcpkg.json
src/: main.cpp
src/api/: auth_api.cpp  auth_api.h  currency_rates_api.cpp  currency_rates_api.h  expenses_api.cpp  expenses_api.h  receipts_api.cpp  receipts_api.h  websocket_api.cpp  websocket_api.h
src/api/middleware/: auth_middleware.cpp  auth_middleware.h
src/database/: currency_rates_dao.h  currency_rates_dao_sqlite.cpp  currency_rates_dao_sqlite.h  db_manager.cpp  db_manager.h  expenses_dao.cpp  expenses_dao.h  receipts_dao.cpp  receipts_dao.h  users_dao.cpp  users_dao.h
src/models/: expense.h  receipt.h  user.h
src/services/: config_service.h  email_service.h
src/utils/: convert_utils.h  date_utils.h
